Fixed main menu layout issues

--- a/src/app/components/mainMenuButton/mainMenuButton.component.scss
+++ b/src/app/components/mainMenuButton/mainMenuButton.component.scss
@@ -6,7 +6,7 @@
 }
 
 .menu-button {
-  display: flex;
+  display: flex !important;
 }
 
 .menu-item {
